--- a/tex/thesis/preface/abstract.tex
+++ b/tex/thesis/preface/abstract.tex
@@ -1,16 +1,16 @@
-The modern time experiences a rapid evolution in the area of satellite internet
-access. However, it is unclear how well those systems actually work and what we
-can realistically expect from internet access via satellites. Previous research
-already looked at their performance and resilience and found several drawbacks.
-In this work, we will continue on that and take a closer look on the properties
-of the Starlink satellite network operator. We explore the TLS handshake
-latency, packet loss, and diurnal latency variation of it and try to determine
-a correlation between latency, packet loss, and other important factors. For
-that, we use historic data recorded on RIPE~Atlas and Cloudflare~Radar from
-January~2022 to June~2024. In the end, we were not able to find a correlation
-between latency and packet loss, but found a surprising pattern showing that
-Starlink serves specific latencies better than others. Also, our findings
-contradict popular research stating far worse performance of Starlink with
-median latencies of 80~ms. Additionally, we find strong geographical
-differences, where even highly developed countries like Germany experience
-packet loss ratios of more than 10\%.
+Our modern era is experiencing a rapid evolution in the area of satellite
+internet access. However, it is unclear how well these systems actually work
+and what we can realistically expect from internet access via satellites.
+Previous research has already looked at their performance and resilience and
+found several drawbacks. In this work, we will continue these aims as we take a
+closer look at the properties of the Starlink satellite network operator. We
+explore the TLS handshake latency, packet loss, and the diurnal latency
+variation and try to determine a correlation between latency, packet loss, and
+other important factors. For this, we use historic data recorded on RIPE~Atlas
+and Cloudflare~Radar from January~2022 to June~2024. In the end, we were not
+able to find a correlation between latency and packet loss, but found a
+surprising pattern showing that Starlink serves specific latencies better than
+others. Also, our findings contradict popular research stating a much worse
+performance of Starlink with median latencies of 80~ms. Additionally, we find
+strong geographical differences, where even highly developed countries like
+Germany experience packet loss ratios of more than 10\%.
