Add topic about usage of Starlink outside supported regions

--- a/tex/thesis/conclusions/conclusions.tex
+++ b/tex/thesis/conclusions/conclusions.tex
@@ -91,3 +91,11 @@ Looking at the traceroute data, it is obvious that \ac{ISL}s are used for
 supporting remote regions. In parallel, research discusses the impact of
 \ac{ISL}s on the performance. Their impact and ideal usage are questions that
 need to be addressed and are a matter of future research.
+
+Another interesting topic is about comparing where Starlink should be used and
+where it is actually used. Starlink supports a very specific set of countries.
+Due to various reasons (e.g., sanctions), it cannot provide service in another
+set of countries (e.g., Iran and North Korea). At the same time, users can
+still buy Starlink equipment and carry it to unsupported countries. We know
+that it will still work, but services like IPinfo will not respond with the
+true location. It is in question to what extent this bypassing is used.
