--- a/tex/thesis/conclusions/conclusions.tex
+++ b/tex/thesis/conclusions/conclusions.tex
@@ -92,10 +92,11 @@ supporting remote regions. In parallel, research discusses the impact of
 \ac{ISL}s on the performance. Their impact and ideal usage are questions that
 need to be addressed and are a matter of future research.
 
-Another interesting topic is about comparing where Starlink should be used and
-where it is actually used. Starlink supports a very specific set of countries.
-Due to various reasons (e.g., sanctions), it cannot provide service in another
-set of countries (e.g., Iran and North Korea). At the same time, users can
-still buy Starlink equipment and carry it to unsupported countries. We know
-that it will still work, but services like IPinfo will not respond with the
-true location. It is in question to what extent this bypassing is used.
+Another interesting topic is about comparing supported regions of Starlink and
+where it is actually used. Due to various reasons (e.g., sanctions or remote
+region), it cannot provide service in a specific set of countries (e.g., Iran
+and North Korea). At the same time, users can still buy Starlink equipment and
+take it to unsupported regions. We know that the equipment will still work
+(e.g., Kiribati was not supported at the time of writing, but had traffic), but
+services like IPinfo will not respond with the true location. It is in question
+to what extent this is exploited and wht the classical use case is.
