Jonas Revision Intro

--- a/tex/thesis/main.tex
+++ b/tex/thesis/main.tex
@@ -35,13 +35,13 @@
 %    \boldNumberSetsfalse % Use this value if you want variables for number sets (like N or R) to appear in blackboard bold rather than bold.
 
     % The title of the thesis. The first argument is for the English name, the second is for the German name.
-    \myTitle{Evaluating Resiliency and Performance of Networked Satellite Systems}{Evaluierung der Resilienz und Leistung von Vernetzten Satelliten Systemen}
+    \myTitle{Evaluating Resiliency and Performance of Networked Satellite Systems}{Evaluierung der Resilienz und Leistung von vernetzten Satelliten Systemen}
 
     % The author’s name.
     \myName{Robert Alexander Uwe Richter}
 
     % The author’s program.
-    \myProgram{IT Systems Engineering}
+    \myProgram{IT-Systems Engineering}
 
     % The date when the thesis will be handed in.
     \dateOfHandingIn{11. November 2024}
