Finalized Jonas Revision Incorporation

--- a/tex/thesis/conclusions/conclusions.tex
+++ b/tex/thesis/conclusions/conclusions.tex
@@ -5,7 +5,7 @@ system. Specifically, we focused on analyzing historic data in the timeframe
 January~2022 to June~2024. RIPE~Atlas and Cloudflare~Radar provided TLS
 handshake latency, ping, traceroute, and other measurement results.
 
-\textbf{RQ 1: How do networked satellite systems perform in terms of latency
+\subsubsection*{RQ 1: How do networked satellite systems perform in terms of latency
 	and packet loss?}
 
 To answer the first research question, we looked at the TLS handshake latency and found
@@ -47,7 +47,7 @@ results. Additionally, research still lacks a model for ideal satellite
 networks. Such a model would describe the placement of satellites, ground
 stations, as well as ideal routing.
 
-\textbf{RQ 2: Do latency and packet loss correlate?}
+\subsubsection*{RQ 2: Do latency and packet loss correlate?}
 
 We expected an interaction in packet loss and latency and therefore correlated
 them. We split the values by year and by country. The results were
@@ -60,7 +60,7 @@ Starlink terminal, the weather, satellite hardware components, or measurement
 destinations. Given the results, at this time we cannot give a conclusive
 answer to the research question.
 
-\text{RQ 3: How do networked satellite systems route?}
+\subsubsection*{RQ 3: How do networked satellite systems route?}
 
 To answer research question 3, we further looked at the routing of the Starlink
 satellite system. First, we wanted to find out the number of hops a route
